# orthanc-mongodb

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  build.cmd  build.sh  clean_coverage_data.sh  compose.yaml  conanfile.txt  generate_coverage.sh  install_gcc_9.sh  orthanc-conf.json
CMake/: autoconfig.cmake  gtest.txt.in  jsoncpp.txt.in  mongo-c-driver.txt.in  mongo-cxx-driver.txt.in
Core/: Configuration.cpp  Configuration.h  Constants.h  MongoDBConnection.cpp  MongoDBConnection.h  MongoDBException.h
Core/orthanc/: OrthancCppDatabasePlugin.h
Framework/Common/: BinaryStringValue.cpp  BinaryStringValue.h  DatabaseManager.cpp  DatabaseManager.h  DatabasesEnumerations.cpp  DatabasesEnumerations.h  Dictionary.cpp  Dictionary.h  GenericFormatter.cpp  GenericFormatter.h  IDatabase.h  IDatabaseFactory.h  IPrecompiledStatement.h  IResult.cpp  IResult.h  ITransaction.h  IValue.h  ImplicitTransaction.cpp  ImplicitTransaction.h  InputFileValue.cpp  InputFileValue.h  Integer64Value.cpp  Integer64Value.h  NullValue.cpp  NullValue.h  Query.cpp  Query.h  ResultBase.cpp  ResultBase.h  ResultFileValue.cpp  ResultFileValue.h  RetryDatabaseFactory.cpp  RetryDatabaseFactory.h  StatementLocation.cpp  StatementLocation.h  Utf8StringValue.cpp  Utf8StringValue.h
Framework/MongoDB/: MongoDatabase.cpp  MongoDatabase.h
Framework/Plugins/: DatabaseBackendAdapterV2.cpp  DatabaseBackendAdapterV2.h  DatabaseBackendAdapterV3.cpp  DatabaseBackendAdapterV3.h  GlobalProperties.h  IDatabaseBackend.h  IDatabaseBackendOutput.h  IndexBackend.cpp  IndexBackend.h  IndexUnitTests.h  PluginInitialization.cpp  PluginInitialization.h  StorageBackend.cpp  StorageBackend.h
IndexPlugin/: MongoDBBackend.cpp  MongoDBBackend.h  MongoDBWrapper.cpp  MongoDBWrapper.h  Plugin.cpp
Migration/: script.py
MongoDB/: CMakeLists.txt
MongoDB/Plugins/: IndexPlugin.cpp  MongoDBIndex.cpp  MongoDBIndex.h  MongoDBStorageArea.cpp  MongoDBStorageArea.h  StoragePlugin.cpp
MongoDB/Tests/: StorageTest.cpp
MongoDB/UnitTests/: UnitTestsMain.cpp
Resources/: SyncOrthancFolder.py
Resources/CMake/: DatabasesFrameworkConfiguration.cmake  DatabasesFrameworkParameters.cmake  DatabasesPluginConfiguration.cmake  DatabasesPluginParameters.cmake  MongoDBConfiguration.cmake
Resources/Config/: configuration.json
Resources/MongoDB/: AutoConfig.cmake  mongo-c-driver.txt.in  mongo-cxx-driver.txt.in
Resources/Orthanc/: EmbedResources.py  LinuxStandardBaseToolchain.cmake  MinGW-W64-Toolchain32.cmake  MinGW-W64-Toolchain64.cmake  MinGWToolchain.cmake
Resources/Orthanc/CMake/: AutoGeneratedCode.cmake  Compiler.cmake  DownloadOrthancFramework.cmake  DownloadPackage.cmake  GoogleTestConfiguration.cmake
Resources/Orthanc/Databases/: DatabaseConstraint.cpp  DatabaseConstraint.h  ISqlLookupFormatter.cpp  ISqlLookupFormatter.h
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h  OrthancPluginException.h  OrthancPluginsExports.cmake
Resources/Orthanc/Sdk-1.9.2/orthanc/: OrthancCDatabasePlugin.h  OrthancCPlugin.h
Scripts/: db_update.py  requirements.txt
StoragePlugin/: MongoDBGridFS.cpp  MongoDBGridFS.h  MongoDBStorageArea.cpp  MongoDBStorageArea.h  Plugin.cpp
Tests/: ConfigurationTest.cpp  IndexPluginTest.cpp  IndexTest.cpp  PluginsTest.cpp  StorageTest.cpp
config/: DefaultOrthancConfig.json  MongoDBConfig.json
docs/: DEPENDENCIES_AUTO_CONFIG.md  PLUGIN_COMPILATION.md  PLUGIN_CONFIGURATION.md  PREREQUISITES.md  README.md  TESTING.md  autoconfig.md  migration.md  performance tests.md  testing.md
